fixed white space in html code

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ nav {
 
     .nav-links {
         position: fixed;
-        background: #131418;
+        background: #ffffff;
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -148,7 +148,7 @@ nav {
     }
 
     .nav-links li a {
-        color: #fff;
+        color: #000000;
     }
 
     .nav-links li:nth-child(1) {
@@ -404,6 +404,7 @@ nav {
 
     .package-description {
         font-size: 16px;
+        word-wrap: break-word;
     }
 
     .packages button {
